tests/negative/gold/lambda6_test.gold
tests/negative/lambda6_test.toit:4:23: error: Lambdas can have at most 4 parameters
  fun := :: | a b c d e0 | null
                      ^~
tests/negative/lambda6_test.toit:5:24: error: Lambdas can have at most 4 parameters
  fun2 := :: | a b c d e0 f0 | null
                       ^~~~~
Compilation failed.
